# kafka-client

./: bun.lockb  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.vue  TopicView.vue  TopicsMenu.vue  main.ts  router.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  theme.json  window.json
src-tauri/src/: lib.rs
src-tauri/src/core/: commands.rs  config.rs
src-tauri/src/kafka/: admin.rs  consumer.rs  metadata.rs  mod.rs  util.rs
src/components/: AboutDialog.vue  ConsumerView.vue  Icons.tsx  MenuModeToggle.vue  Navbar.vue
src/components/ConsumerGroups/: GroupDetail.vue  GroupList.vue  NewConsumerGroupForm.vue
src/components/Consumers/: ConsumerView.vue
src/components/Topics/: TopicList.vue  TopicView.vue
src/components/ui/alert-dialog/: AlertDialogContent.vue
src/components/ui/command/: CommandList.vue
src/components/ui/context-menu/: ContextMenuContent.vue
src/components/ui/dialog/: DialogContent.vue  DialogScrollContent.vue
src/components/ui/drawer/: DrawerContent.vue
src/components/ui/dropdown-menu/: DropdownMenuContent.vue
src/components/ui/hover-card/: HoverCardContent.vue
src/components/ui/menubar/: MenubarContent.vue  MenubarSubContent.vue
src/composables/: useTheme.ts
src/lib/: config.ts  utils.ts
src/lib/kafka/: index.ts  topicConfigs.ts
src/pages/: Consumer.vue  ConsumerGroups.vue  Home.vue  Topics.vue
src/stores/: brokers.ts  configuration.ts  metadata.ts  topics.ts
(+9 files in other folders)
