[package]
name = "kafka_app"
version = "0.0.0"
description = "A Kafka Client Application"
authors = ["ruman_saleem"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.36.2" }
futures = "0.3.30"
byteorder = "1.3.2"
tauri-plugin-shell = "2.0.0-beta.7"
regex = "1.10.5"
# tauri-plugin-window = "2.0.0-alpha.2"
tauri-plugin-os = "2.0.0-beta.6"
tauri-plugin-theme = "0.4.1"
itertools = "0.13.0"

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
